<resources>
    <string name="app_name">Triple M Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="favourite">Favourite</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="add_to_fav_btn">Add To Fav</string>


    <string name="filter_title">Filter</string>
    <string name="wishlist">Favourites</string>
    <string name="me">Me</string>
    <string name="sale">On Sale</string>
    <string name="price_range">Price Range</string>

    <string name="adidas">Adidas</string>
    <string name="ascis">Ascis Tiger</string>
    <string name="converse">Converse</string>
    <string name="dr">Dr Martens</string>
    <string name="flex">Flex Fit</string>
    <string name="herschel">Herschel</string>
    <string name="nike">Nike</string>
    <string name="puma">Puma</string>
    <string name="palladuim">Palladuim</string>
    <string name="supra">Supra</string>
    <string name="timberland">Timberland</string>
    <string name="vans">VANS</string>
    <string name="kid">Kid</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="product">Product</string>
    <string name="details">Details</string>
    <string name="reviews">Reviews</string>
    <string name="select_color">SELECT COLOR</string>
    <string name="brand">BRAND</string>
    <string name="publish_title">PUBLISH AT</string>
    <string name="category">CATEGORY</string>
    <string name="status">STATUS</string>
    <string name="serial">SERIAL</string>
    <string name="fitting">FITTING</string>
    <string name="select_size">SELECT SIZE (US)</string>
    <string name="password_hint">Enter your password</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="email_hint">Enter your e-mail</string>
    <string name="min_hint">Min</string>
    <string name="max_hint">Max</string>
    <string name="user_hint">Enter your username</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="forget_password">Forget Password</string>
    <string name="sign_in_title">Log In</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="all_my_orders">All My Orders</string>
    <string name="pending_payments">Pending Payments</string>
    <string name="pending_shipments">Pending Shipments</string>
    <string name="finished_orders">Finished Orders</string>
    <string name="shipment_addresses">Shipment Addresses</string>
    <string name="currency">Currency</string>
    <string name="total">Total</string>
    <string name="free_domestic_shipping">Free Domestic Shipping</string>
    <string name="checkout">CHECKOUT</string>
    <string name="user_info">User Info</string>
    <string name="confirm">Confirm</string>
    <string name="back">Back</string>
    <string name="mobile_hint">Enter you mobile number</string>
    <string name="address_hint">Enter your address (optional)</string>
    <string name="choose_your_preferred_language">Choose your preferred language</string>
    <string name="english">English</string>
    <string name="arabic">العربية</string>
    <string name="brands">Brands</string>
    <string name="all_categories">All Categories</string>
    <string name="latest">Latest</string>
    <string name="see_all">See All</string>
    <string name="recently">RECENTLY VIEWED</string>
    <string name="recommeded">RECOMMENDED</string>
    <string name="clear">CLEAR</string>
    <string name="refresh">REFRESH</string>
    <string name="languages">Languages</string>
    <string name="choose_your_preferred_currency">Choose your preferred currency</string>
    <string name="egp">EGP</string>
    <string name="usd">USD</string>
    <string name="eur">EUR</string>
    <string name="gbp">GBP</string>
    <string name="log_out">LOG OUT</string>
    <string name="choose_your_preferred_address">Choose your preferred address</string>
    <string name="enter_address_tag">Enter address tag</string>
    <string name="products">Products</string>
    <string name="categories">Categories</string>
    <string name="price">Price:</string>
    <string name="created_at">Created at:</string>
    <string name="orders">Orders</string>
    <string name="order_placed">Order Placed!</string>
    <string name="my_orders">My Orders</string>
    <string name="your_order_was_placed_successfully_nfor_more_details_check_all_my_orders_npage_under_profile_tab">Your order was placed successfully.\nFor more details, check All My Orders\npage under Profile tab</string>
    <string name="dialog_del_ok">Remove</string>
    <string name="dialog_del_cancel">Cancel</string>
    <string name="dialog_del">Are you sure you want to remove this order?</string>
    <string name="for_orders_that_is_greater_than_or_equal">for orders that is greater than or equal %1$s</string>
    <string name="enter_apartment_number">Apartment number</string>
    <string name="enter_phone_number">Phone number</string>
    <string name="empty_phone_number">empty phone number</string>
    <string name="empty_building_number">empty building number</string>
    <string name="empty_apartment_number">empty apartment number</string>
    <string name="empty_tag">empty tag</string>
    <string name="invalid_phone_number">invalid phone number</string>
    <string name="clear_all">clear all</string>
    <string name="do_you_want_to_perform_this_action">Do you want to perform this action?</string>
    <string name="undo">Undo</string>
    <string name="ordered_by">Ordered by:</string>
    <string name="discount">Discount:</string>
    <string name="all_brands">All Brands</string>
    <string name="credit_card">Credit card</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="payment_method">PAYMENT METHOD</string>
    <string name="add_promo_code">Add Promo Code</string>
    <string name="apply">apply</string>



    <string name="egp_sym">LE</string>
    <string name="usd_sym">$</string>
    <string name="gbp_sym">£</string>
    <string name="eur_sym">€</string>
    <string name="as_a_guest">as a guest</string>
    <string name="you_must_be_logged_in_to_use_this_feature">You must be logged in to use this feature</string>
    <string name="address">Address: </string>

</resources>