<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.search.view.FilterFragment">

    <TextView
        android:id="@+id/filter_title"
        style="@style/title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/filter_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/category_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/radio_group_background"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter_title">

        <RadioButton
            android:id="@+id/men_radio"

            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/tab_selector_background"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/men"
            android:textColor="@drawable/tab_selector_text"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/kid_radio"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/tab_selector_background"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="@string/kid"
            android:textColor="@drawable/tab_selector_text"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/women_radio"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/tab_selector_background"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="@string/women"
            android:textColor="@drawable/tab_selector_text"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />


    </RadioGroup>


    <TextView
        android:id="@+id/color"
        style="@style/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="40dp"
        android:text="@string/select_color"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/category_radio_group"
        app:layout_constraintTop_toBottomOf="@id/category_radio_group"

        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/color_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/color"
        app:layout_constraintTop_toBottomOf="@id/color"
        tools:listitem="@layout/color_picker_item" />

    <TextView
        android:id="@+id/brands_title"
        style="@style/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="40dp"
        android:text="@string/brands"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/category_radio_group"
        app:layout_constraintTop_toBottomOf="@id/color_rv" />

    <HorizontalScrollView
        android:id="@+id/brands_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/brands_title">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/brands_chipgroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:checkableBehavior="all">

            <com.google.android.material.chip.Chip
                android:id="@+id/adidas_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adidas" />

            <com.google.android.material.chip.Chip
                android:id="@+id/asics_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ascis" />

            <com.google.android.material.chip.Chip
                android:id="@+id/converse_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/converse" />

            <com.google.android.material.chip.Chip
                android:id="@+id/dr_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dr" />

            <com.google.android.material.chip.Chip
                android:id="@+id/flex_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flex" />

            <com.google.android.material.chip.Chip
                android:id="@+id/herschel_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/herschel" />

            <com.google.android.material.chip.Chip
                android:id="@+id/nike_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nike" />


            <com.google.android.material.chip.Chip
                android:id="@+id/palladuim_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/palladuim" />

            <com.google.android.material.chip.Chip
                android:id="@+id/puma_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/puma" />

            <com.google.android.material.chip.Chip
                android:id="@+id/supra_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/supra" />

            <com.google.android.material.chip.Chip
                android:id="@+id/timberland_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timberland" />

            <com.google.android.material.chip.Chip
                android:id="@+id/vans_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vans" />


        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <TextView
        android:id="@+id/price_title"
        style="@style/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="40dp"
        android:text="@string/price"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/category_radio_group"
        app:layout_constraintTop_toBottomOf="@id/brands_scrollview" />

    <TextView
        android:id="@+id/price_text"
        style="@style/subtitle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="40dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/category_radio_group"
        app:layout_constraintTop_toBottomOf="@id/brands_scrollview"
        tools:text="500" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/minTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="15dp"
        android:hint="@string/min_hint"
        android:textColorHint="@color/gary"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toStartOf="@id/maxTextInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/minEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/dark_gary"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/maxTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="15dp"
        android:hint="@string/max_hint"
        android:textColorHint="@color/gary"
        app:endIconMode="clear_text"
        app:layout_constraintStart_toEndOf="@id/minTextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/maxEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/dark_gary"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/apply"
        android:layout_width="0dp"
        android:layout_margin="25dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/minTextInputLayout"
        android:text="Apply"/>
</androidx.constraintlayout.widget.ConstraintLayout>