<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.giraffe.triplemapplication.features.home.view.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_allCategoriesFragment"
            app:destination="@id/allCategoriesFragment" />
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.giraffe.triplemapplication.features.search.view.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/cartFragment"
        android:name="com.giraffe.triplemapplication.features.cart.view.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.giraffe.triplemapplication.features.profile.view.ProfileFragment"
        android:label="@string/me"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/allCategoriesFragment"
        android:name="com.giraffe.triplemapplication.features.home.view.AllCategoriesFragment"
        android:label="fragment_all_categories"
        tools:layout="@layout/fragment_all_categories" />

</navigation>